# data-protection-index

./: .env.example  .gitignore  PIPELINE_FLOW_EXPLAINED.txt  README.md  pyproject.toml  requirements.txt
config/: config.yaml  countries.yaml  document_types.yaml
src/: main.py
src/clients/: __init__.py  anthropic_client.py  deepseek_client.py  groq_client.py  llm_client.py  mistral_client.py  openai_client.py  search_client.py
src/core/: __init__.py  country_resolver.py  document_identifier.py  document_retriever.py  query_generator.py  relevance_filter.py  search_executor.py  text_extractor.py
src/models/: country.py  document.py  retrieval.py
src/prompts/: __init__.py  document_identification.py  query_generation.py  relevance_scoring.py
src/utils/: config.py  logger.py
tests/: conftest.py  quick_test_anthropic.py  quick_test_deepseek.py  quick_test_groq.py  quick_test_mistral.py  test_core_pipeline.py  test_llm_clients.py  test_logger.py  test_prompts.py  test_search_client.py
tests/unit/: test_document_retriever.py  test_search_client.py  test_text_extractor.py
